--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.2.13",
+    "aws-amplify": "^4.2.7",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
